--- a/Items-grid.html
+++ b/Items-grid.html
@@ -8,32 +8,55 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
+        <div id="popup-container">
+            <div id="login">
+                <button class="x">x</button>
+                Please Sign In
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" name="Remember me">
+                    Remember me
+                    <button>Sign In</button>
+                </form>
+                <a href="#register">Register</a>
+            </div>
+            <div id="register">
+                <button class="x">x</button>
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button>Registration</button>
+                </form>
+                <a href="#login">Sign In</a>
+            </div>
+        </div>  
         <header class="header">
             <div class="logo">
                 <img alt="logo" class="logo__logo" src=".\pics\logo.png">
             </div>
             <div class='header-buttons'>
                 <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button class="header-elements__Element" name="card">
+                <a href="#login"><button class="header-elements__Element" name="card">
                     <i class="fas fa-shopping-cart"></i>
-                </button>
-                <button class="header-elements__Element" name="profile">
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
                     <i class="fas fa-user-circle"></i>
-                </button>
+                </button></a>
             </div>
         </header>
-        <nav class="widget">
-            <h3 class="widget-title">Категории</h3>
-            <ul class="widget-list">
-                <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-                <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
-            </ul>
-            </div>
-        </nav>  
-        <div class="live-veiw"><a>List View</a></div>
+        <div class="live-veiw"><a>Grid View</a></div>
+        <div id="content">
+            <nav class="widget">
+                <h3 class="widget-title">Категории</h3>
+                <ul class="widget-list">
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                </ul>
+            </nav>
         <main class="main">    
             <div class="good-in-grid">
                 <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
