--- a/Order-form.html
+++ b/Order-form.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <title>Order form</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/order-form.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
         <div id="popup-container">
-            <div id="login">
+            <div id="popup-container__login login">
                 <button class="x">x</button>
                 Please Sign In
                 <form>
