--- a/categories-grid.html
+++ b/categories-grid.html
@@ -3,53 +3,53 @@
     <head>
         <meta charset="utf-8">
         <title> categories-grid </title>
-        <link rel="stylesheet" href="./css/categories-grid.css">
+        <link rel="stylesheet" href="./artifacts/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
-            </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button class="header-elements__Element" name="card">
+    <body class="body">
+        <header class="header body__header">
+            <a href="categories-grid.html">
+                <div class="header__logo logo"> </div>
+            </a>
+            <div class="header__header-elements">
+                <input class="header__search search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a class="header__icons icons" name="card">
                     <i class="fas fa-shopping-cart"></i>
-                </button>
-                <button class="header-elements__Element" name="profile">
+                </a>
+                <a class="header__icons icons" name="profile">
                     <i class="fas fa-user-circle"></i>
-                </button>
+                </a>
             </div>
         </header>
         <main class="main">
             <div class="categories-grid">
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
-                <div class="categories-grid__category">
-                    <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
+                <div class="categories-grid__category category">
+                    <img alt="photo of category" class="category__pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
                     <span><a>Shoes</a> (45)</span>
                 </div>
             </div>
